--- a/data-analysis/CheshirePlatformCertification.ipynb
+++ b/data-analysis/CheshirePlatformCertification.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "release=\"7.0.1\"\n",
-    "current_build=\"\" #5906"
+    "current_build=\"\""
    ]
   },
   {
@@ -38,6 +38,9 @@
    "execution_count": 169,
    "id": "a59c0b8e",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "hide_input"
     ]
@@ -47,9 +50,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import numpy as np\n",
     "import requests\n",
-    "#import tabulate\n",
+    "\n",
     "import matplotlib.patches as mpatches\n",
     "import json\n",
     "import plotly.express as px\n",
@@ -66,6 +68,9 @@
    "execution_count": 170,
    "id": "7d8fbb79",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "hide_input"
     ]
@@ -86,6 +91,9 @@
    "execution_count": 179,
    "id": "1a63ef62-fb20-4c6e-927d-fa67c80579d9",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -101,6 +109,9 @@
    "execution_count": 172,
    "id": "12290853",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "hide_input"
     ]
@@ -127,6 +138,9 @@
    "execution_count": 173,
    "id": "8e102d0a",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "hide_input"
     ]
@@ -157,6 +171,9 @@
    "execution_count": 174,
    "id": "19251d1c",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "hide_input"
     ]
@@ -201,6 +218,9 @@
    "execution_count": 175,
    "id": "8cdceb83",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -314,8 +334,7 @@
     "query_failed_certify_jobs = f'SELECT url || to_string(build_id) as `joburl`, CASE WHEN name LIKE \"centos-ipv6%\" THEN \"ipv6\" ELSE SPLIT(name,\"-\")[0] END AS `platform`, name AS `job`, failCount as `failures` FROM server WHERE `build`=$version AND (name LIKE \"%os_certify%\" OR (name LIKE \"centos-ipv6%\" AND name NOT LIKE \"centos-ipv6_sanity%\")) AND result != \"SUCCESS\" ORDER by `failures` DESC, os, `job` LIMIT 15'\n",
     "result0 = run_query(query=query_failed_certify_jobs, param={'$version': f'\"{release}-{current_build}\"'})\n",
     "\n",
-    "#def make_clickable(val):\n",
-    "#    return '<a href=\"{}\">{}</a>'.format(val,val)\n",
+    "\n",
     "def make_clickable(url, name):\n",
     "    return '<a href=\"{}\" rel=\"noopener noreferrer\" target=\"_blank\">{}</a>'.format(url,name)\n",
     "\n",
@@ -361,6 +380,9 @@
    "execution_count": 182,
    "id": "b9444286-6d25-4bd4-b994-cd93f8612813",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
